# sbi_calcium_imaging

./: README.md  pyproject.toml
notebooks/: train_something.py
src/sbi_calcium_imaging/: hill_simulator.py  jax_greenberg.py  spike_train_utils.py
src/sbi_calcium_imaging/nn/: networks.py  s4.py
