[project]
name = "sbi_calcium_imaging"
version = "0.1.0"
description = "Some sbi for calcium imaging"
readme = "README.md"
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "sbi>=0.20.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.scripts]
demo-cli = "demo.cli:main"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.4.0",
]